# voicefence

./: .gitignore  README.md
.claude/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt
backend/app/: config.py  inference.py  main.py  schemas.py
backend/app/routes/: analyze.py  stream.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  pwa-assets.config.ts  vercel.json  vite.config.ts
frontend/public/: sw-share-target.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/anim/: AnimatedNumber.tsx  CursorGlow.tsx  Magnetic.tsx  Marquee.tsx  RadialGauge.tsx  Reveal.tsx  (+3 more)
frontend/src/lib/: api.ts  auth.tsx  history.ts  shareTarget.ts  supabase.ts
frontend/src/pages/: Analyze.tsx  History.tsx  HowItWorks.tsx  Landing.tsx  LiveListen.tsx  Login.tsx  Signup.tsx
ml/: README.md  pyproject.toml
ml/configs/: rawnet2_asvspoof_la.yaml  rawnet2_v3_hien.yaml
ml/data/synth_hi_en/: synth_hi_en_test.protocol.txt  synth_hi_en_train.protocol.txt
ml/src/awaaz_ml/: eval_synth_lang.py  evaluate.py  metrics.py  predict.py  strip_checkpoint.py  train.py  utils.py
ml/src/awaaz_ml/augment/: __init__.py  codecs.py
ml/src/awaaz_ml/data/: __init__.py  asvspoof.py  audio.py  split_synth.py  verify.py
ml/src/awaaz_ml/models/: __init__.py  rawnet2.py
ml/src/awaaz_ml/synth/: __init__.py  build_synthetic_set.py  engines.py  ingest_bonafide.py  templates.py
ml/tests/: smoke_test.py
supabase/migrations/: 0001_analysis_history.sql  0002_analysis_history_grants.sql
(+10 files in other folders)
